<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/drawer_home"/>
        <item
            android:id="@+id/nav_Rides"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_ticket_select" />
        <item
            android:id="@+id/nav_AR"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_AR" />
        <item
            android:id="@+id/nav_Map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_map" />
        <item
            android:id="@+id/nav_Tickets"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/view_tickets" />
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>


</menu>
